fix(profile): improve UX/a11y of profile page save functionality
Disabled buttons had white text which makes them hard to read and fails
WCAG compliance. They're now #454545 per USWDS guidance.

The save button on the profile page gave no feedback after clicking it.
It now shows an animated dots progress indicator that is taken directly
from the login.gov button pattern.

See https://github.local/HMDA-Operations/hmda-devops/issues/5543
See https://designsystem.digital.gov/components/button/
See https://github.com/18F/identity-idp/blob/46ec27d430f90d7b128d4e6be57d34478f8002a3/app/assets/stylesheets/components/_spinner-dots.scss

--- a/src/app.css
+++ b/src/app.css
@@ -381,7 +381,7 @@ button:visited:disabled,
 input[type='submit']:disabled,
 input[type='submit']:visited:disabled {
   background-color: #d6d7d9;
-  color: #ffffff;
+  color: #454545;
   pointer-events: none;
 }
 button:disabled:hover,
@@ -403,7 +403,7 @@ input[type='submit']:visited:disabled:hover,
 input[type='submit']:visited:disabled:focus,
 input[type='submit']:visited:disabled:active {
   background-color: #d6d7d9;
-  color: #ffffff;
+  color: #454545;
 }
 
 .nowrap {
